<resources>
    <string name="app_name">CSIA Service App</string>

    <!-- Dialog strings-->
    <string name="loading">Loading...</string>

    <!-- BaseActivity -->
    <!-- nav bar-->
    <string name="nav_header_description">Navigation Drawer header</string>
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="submitted_requests">My Submitted Requests</string>
    <string name="all_requests">All Available Requests</string>
    <string name="ongoing_requests">Ongoing Requests</string>
    <string name="completed_requests">Completed Requests</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>

    <!-- ChooseAuthenticationActivity -->
    <!-- xml layout -->
    <string name="sign_up">Sign up</string>
    <string name="normal_log_in">Log in</string>

    <!--LoginActivity -->
    <!-- xml layout -->
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- SignUpActivity -->
    <!-- xml layout -->
    <string name="username">Username</string>
    <string name="re_password">Re-enter Password</string>
    <string name="type_spinner_text">Choose Account Type</string>

    <!-- ProfileActivity -->
    <!-- xml layout -->
    <string name="view_all_requests">All Requests</string>
    <string name="my_requests">My Requests</string>
    <string name="submit_request">Submit Request</string>
    <string name="logout">Logout</string>

    <!-- SendRequestActivity -->
    <!-- xml layout -->
    <string name="title">Title</string>
    <string name="description">Description:</string>
    <string name="lang_spinner_desc">Choose Language</string>
    <string name="service_spinner_desc">Choose Service Type</string>
    <string name="prior_spinner_desc">Choose Priority</string>
    <string name="loc_spinner_desc">Choose Location</string>

    <!-- SingleSubmittedRequestActivity -->
    <!-- xml layout -->
    <string name="title_format">Request Title: %1$s</string>
    <string name="lang_format">Language: %1$s</string>
    <string name="service_format">Service: %1$s</string>
    <string name="priority_format">Priority: %1$s</string>
    <string name="location_format">Location: %1$s</string>
    <string name="send_quota">Send Quota</string>

    <!-- SendQuotaFragment -->
    <!-- xml layout -->
    <string name="pricing">Your Suggested Price</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

    <!-- AcceptQuotaFragment -->
    <!-- xml layout -->
    <string name="show_price_format">Suggested Price: %1$d</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <!-- ChatActivity -->
    <!-- xml layout -->
    <string name="message_hint">Message Here</string>
    <!-- menu -->
    <string name="request_info">Request Information</string>

    <!-- SingleOngoingRequestActivity -->
    <string name="complete_request">Complete Request</string>

    <!-- CompleteRequestFragment -->
    <string name="update_request">Update Request Status</string>
    <string name="complete">Complete</string>

    <!-- SingleCompletedRequestActivity -->
    <string name="opposing_user_format">Opposing User: %s</string>
    <string name="price_paid_format">Price Paid: $%d</string>
    <!-- ReviewActivity -->
    <string name="overall_rating">Overall Rating</string>
    <string name="submit_review">Submit Review</string>

    <!-- MyReviewsActivity -->
    <string name="my_reviews">All My Reviews</string>
    <string name="avg_score_format">Average Rating: %s</string>

    <!-- SettingsActivity -->
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="resend_email">Resend Verification Email</string>
    <string name="change_username">Change Username</string>
    <string name="confirm">Confirm</string>

</resources>
